--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -124,4 +124,7 @@
 
   <string name="media_session_root">Root</string>
   <string name="media_session_recent">Recent</string>
+
+  <string name="notification_sleep_timer_enable">Enable Sleep Timer</string>
+  <string name="notification_sleep_timer_disable">Disable Sleep Timer</string>
 </resources>
