--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
   <string name="change_book_name">Name</string>
   <string name="download_book_cover">Cover from the Internet</string>
   <string name="pick_book_cover">Cover from the file system</string>
+  <string name="cover_search_template_no_author">%s audiobook cover</string>
+  <string name="cover_search_template_with_author">%1$s by %2$s audiobook cover</string>
   <string name="edit_book_title">Edit book</string>
   <string name="mark_as_completed">Mark as Completed</string>
   <string name="mark_as_current">Mark as Current</string>
