Create a workaround for https://issuetracker.google.com/issues/258270138
Inform the user about the missing system app permission and provide a way to fix it.

--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -114,4 +114,7 @@
   <string name="notification_sleep_timer_disable">Disable Sleep Timer</string>
   <string name="generic_error_message">Something went wrong 😢</string>
   <string name="generic_error_retry">Retry</string>
+  <string name="storage_bug_title">Permission required</string>
+  <string name="storage_bug_subtitle">For certain devices, particularly some Samsung models, a system app is missing the necessary permission to access the external storage. This access is essential for Voice to read your audiobooks.</string>
+  <string name="storage_bug_button">Grant permission</string>
 </resources>
