--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="pick_book_cover">Cover from the file system</string>
     <string name="cover_search_template_no_author">%s audiobook cover</string>
     <string name="cover_search_template_with_author">%1$s by %2$s audiobook cover</string>
+    <string name="cover_search.icon_recent">Recent query</string>
+    <string name="cover_search.author">Author</string>
     <string name="edit_book_title">Edit book</string>
     <string name="mark_as_completed">Mark as Completed</string>
     <string name="mark_as_current">Mark as Current</string>
@@ -103,5 +105,15 @@
     <string name="storage_bug_button">Grant permission</string>
     <string name="select_folder_title_onboarding">Add Your First Audiobook</string>
     <string name="select_folder_title_default">Add your Audiobook(s)</string>
+    <string name="select_folder_type_file">File</string>
+    <string name="select_folder_type_folder">Folder</string>
     <string name="select_folder_subtitle">Would you like to add a single file as a book or a folder?</string>
+    <string name="onboarding_welcome_title">Welcome to Voice!</string>
+    <string name="onboarding_welcome_subtitle">Your personal pocket audiobook player. Let\'s get you set up.</string>
+    <string name="onboarding.button_next">Next</string>
+    <string name="onboarding.explanation.title">Your Library, Your Way</string>
+    <string name="onboarding.explanation.subtitle">With Voice, you can add books as individual files or organize them in folders. You choose!</string>
+    <string name="onboarding.completion.title">You\'re All Set!</string>
+    <string name="onboarding.completion.subtitle">Your first audiobook is ready to play. Enjoy your journey with Voice!</string>
+    <string name="onboarding.completion.next_button">Start Listening</string>
 </resources>
