--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="pref_theme_dark">Dark Theme</string>
     <string name="pref_auto_rewind_title">Auto rewind</string>
     <string name="pref_suggest_idea">Suggest an idea</string>
+    <string name="pref_export_database">Export the database</string>
     <string name="pref_use_grid">Use grid layout</string>
     <string name="pref_report_issue">Report a problem</string>
     <string name="pref_help_translating">Help translating Voice</string>
