fix inconsistency in capitalization

--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="remove">Remove</string>
     <string name="play_current">Play current</string>
     <string name="book_header_current">Current</string>
-    <string name="book_header_not_started">Not started Yet</string>
+    <string name="book_header_not_started">Not started yet</string>
     <string name="book_header_completed">Completed</string>
     <string name="close">Close</string>
     <string name="delete">Delete</string>
