fix: update chapter selection logic in BookPlayViewModel and related UI components
Previously, having identical chapter marks in several files would always lead to multiple chapters being selected as active.

--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
         <item quantity="one">%d minute</item>
         <item quantity="other">%d minutes</item>
     </plurals>
+    <string name="playback.current_chapter">Current chapter</string>
 </resources>
