feat: Add an in-app FAQ link

--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="pref_help_translating">Help translating Voice</string>
     <string name="pref_get_support">Get support</string>
     <string name="pref_app_version">App version</string>
+    <string name="pref_faq">FAQ</string>
     <string name="popup_edit">Edit</string>
     <string name="remove">Remove</string>
     <string name="play_current">Play current</string>
