--- a/core/strings/src/main/res/values/strings.xml
+++ b/core/strings/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="mark_as_current">Mark as Current</string>
     <string name="mark_as_not_started">Mark as Not Started Yet</string>
     <string name="audiobook_folders_title">Audiobook folders</string>
+    <string name="pref_audiobook_folders_explanation">Manage folders scanned for audiobooks</string>
     <string name="playback_speed">Playback speed</string>
     <string name="bookmark">Bookmark</string>
     <string name="bookmark_edit_title">Edit bookmark</string>
